Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-5869

Specifying an invalid ACL file will cause a core dumps when management is disabled

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.28
    • 0.29
    • C++ Broker
    • None

    Description

      The root cause is due to the ACL module trying to fire an event regardless of whether the management module is there or not.

      Core was generated by `./qpidd --auth no -m no -t --acl-file ./data/acl.txt'.
      Program terminated with signal 11, Segmentation fault.
      #0 0x00007f7e5e855bbd in qpid::management::ManagementAgent::raiseEvent(qpid::management::ManagementEvent const&, qpid::management::ManagementAgent::severity_t) () from /home/rajith/workspace/git-qpid/qpid/qpid/cpp/build/src/libqpidbroker.so.2
      Missing separate debuginfos, use: debuginfo-install boost-program-options-1.53.0-14.fc19.x86_64 libuuid-2.23.2-5.fc19.x86_64 nspr-4.10.6-1.fc19.x86_64 nss-3.16.1-1.fc19.x86_64 nss-util-3.16.1-1.fc19.x86_64
      (gdb) bt
      #0 0x00007f7e5e855bbd in qpid::management::ManagementAgent::raiseEvent(qpid::management::ManagementEvent const&, qpid::management::ManagementAgent::severity_t) () from /home/rajith/workspace/git-qpid/qpid/qpid/cpp/build/src/libqpidbroker.so.2
      #1 0x00007f7e5e6bf20d in qpid::acl::Acl::readAclFile(std::string&, std::string&) ()
      from /home/rajith/workspace/git-qpid/qpid/qpid/cpp/build/src/libqpidbroker.so.2
      #2 0x00007f7e5e6bf0b7 in qpid::acl::Acl::readAclFile(std::string&) ()
      from /home/rajith/workspace/git-qpid/qpid/qpid/cpp/build/src/libqpidbroker.so.2
      #3 0x00007f7e5e6bdd23 in qpid::acl::Acl::Acl(qpid::acl::AclValues&, qpid::broker::Broker&) ()
      from /home/rajith/workspace/git-qpid/qpid/qpid/cpp/build/src/libqpidbroker.so.2
      #4 0x00007f7e5e6d4273 in qpid::acl::AclPlugin::init(qpid::broker::Broker&) ()
      from /home/rajith/workspace/git-qpid/qpid/qpid/cpp/build/src/libqpidbroker.so.2
      #5 0x00007f7e5e6d4851 in bool qpid::acl::AclPlugin::init<qpid::broker::Broker>(qpid::Plugin::Target&) ()
      from /home/rajith/workspace/git-qpid/qpid/qpid/cpp/build/src/libqpidbroker.so.2
      #6 0x00007f7e5e6d4425 in qpid::acl::AclPlugin::initialize(qpid::Plugin::Target&) ()
      from /home/rajith/workspace/git-qpid/qpid/qpid/cpp/build/src/libqpidbroker.so.2
      #7 0x00007f7e5e03287c in boost::_mfi::mf1<void, qpid::Plugin, qpid::Plugin::Target&>::operator()(qpid::Plugin*, qpid::Plugin::Target&) const ()
      from /home/rajith/workspace/git-qpid/qpid/qpid/cpp/build/src/libqpidcommon.so.2
      #8 0x00007f7e5e032263 in void boost::_bi::list2<boost::arg<1>, boost::reference_wrapper<qpid::Plugin::Target> >::operator()<boost::_mfi::mf1<void, qpid::Plugin, qpid::Plugin::Target&>, boost::_bi::list1<qpid::Plugin* const&> >(boost::_bi::type<void>, boost::_mfi::mf1<void, qpid::Plugin, qpid::Plugin::Target&>&, boost::_bi::list1<qpid::Plugin* const&>&, int) ()
      from /home/rajith/workspace/git-qpid/qpid/qpid/cpp/build/src/libqpidcommon.so.2
      #9 0x00007f7e5e0317ca in void boost::_bi::bind_t<void, boost::_mfi::mf1<void, qpid::Plugin, qpid::Plugin::Target&>, boost::_bi::list2<boost::arg<1>, boost::reference_wrapper<qpid::Plugin::Target> > >::operator()<qpid::Plugin*>(qpid::Plugin* const&) ()
      from /home/rajith/workspace/git-qpid/qpid/qpid/cpp/build/src/libqpidcommon.so.2
      #10 0x00007f7e5e030d43 in boost::bi::bind_t<void, boost::_mfi::mf1<void, qpid::Plugin, qpid::Plugin::Target&>, boost::_bi::list2<boost::arg<1>, boost::reference_wrapper<qpid::Plugin::Target> > > std::for_each<gnu_cxx::normal_iterator<qpid::Plugin* const*, std::vector<qpid::Plugin*, std::allocator<qpid::Plugin*> > >, boost::_bi::bind_t<void, boost::_mfi::mf1<void, qpid::Plugin, qpid::Plugin::Target&>, boost::_bi::list2<boost::arg<1>, boost::reference_wrapper<qpid::Plugin::Target> > > >(gnu_cxx::normal_iterator<qpid::Plugin* const*, std::vector<qpid::Plugin*, std::allocator<qpid::Plugin*> > >, __gnu_cxx::_normal_iterator<qpid::Plugin* const*, std::vector<qpid::Plugin*, std::allocator<qpid::Plugin*> > >, boost::_bi::bind_t<void, boost::_mfi::mf1<void, qpid::Plugin, qpid::Plugin::Target&>, boost::_bi::list2<boost::arg<1>, boost::reference_wrapper<qpid::Plugin::Target> > >) () from /home/rajith/workspace/git-qpid/qpid/qpid/cpp/build/src/libqpidcommon.so.2
      #11 0x00007f7e5e02fa3b in void qpid::(anonymous namespace)::each_plugin<boost::_bi::bind_t<void, boost::_mfi::mf1<void, qpid::Plugin, qpid::Plugin::Target&>, boost::_bi::list2<boost::arg<1>, boost::reference_wrapper<qpid::Plugin::Target> > > >(boost::_bi::bind_t<void, boost::_mfi::mf1<void, --Type <return> to continue, or q <return> to quit--
      qpid::Plugin, qpid::Plugin::Target&>, boost::_bi::list2<boost::arg<1>, boost::reference_wrapper<qpid::Plugin::Target> > > const&) ()
      from /home/rajith/workspace/git-qpid/qpid/qpid/cpp/build/src/libqpidcommon.so.2
      #12 0x00007f7e5e02f9cb in qpid::Plugin::initializeAll(qpid::Plugin::Target&) ()
      from /home/rajith/workspace/git-qpid/qpid/qpid/cpp/build/src/libqpidcommon.so.2
      #13 0x00007f7e5e701a04 in qpid::broker::Broker::Broker(qpid::broker::BrokerOptions const&) ()
      from /home/rajith/workspace/git-qpid/qpid/qpid/cpp/build/src/libqpidbroker.so.2
      #14 0x0000000000406287 in qpid::broker::QpiddBroker::execute(qpid::broker::QpiddOptions*) ()
      #15 0x00000000004096af in qpid::broker::run_broker(int, char**, bool) ()
      #16 0x00000000004066d5 in main ()

      Attachments

        Activity

          People

            rajith Rajith Muditha Attapattu
            rajith Rajith Muditha Attapattu
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: